test/tests/stages/18_structures/invalid_struct_tags/sizeof_undeclared.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CSizeOfT: 
                  Structure: 
                    TIdentifier: c
                    Bool: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: c
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
